# pahkala.github.io

./: .gitkeep  EscapeRoomV1_1.html  EscapeRoomfinal.html  README.md  TwineProject  ti83_PivotProg.txt  twine_project
ART/homework/Homework3/: homework3.js
ART/homework/UserInputAssignment/: index.html  project.js
ART151/FinalProject/: final.js  index.html
ART151/homework/Homework2/: gitIgnore
ART151/homework/Homework3/: index.html
ART151/homework/UserInputAssignment/: test.js
ART151/p5projects/Homework2/: gitIgnore
Linked_list_merge_sort/: CMakeLists.txt  Project2.cpp
MCS/Projects/260/Project_1/: proj_1.py
MCS/Projects/260/Project_4/: Project4.py
MCS/Projects/260/project_5/: README.txt  polynomial_grapher.py  project5.py  test.py
MCS/Projects/275/Project 2/: project2.txt
MCS/Projects/275/Project3/: project3.py
MCS/Projects/275/project1/: proj_1.py
MCS/Projects/360/Project1/: a.out  problem1.txt  problem2.txt  project_hint.cpp  scratch.cpp
MCS/Projects/360/Project2/: a.out  (+2 more)
TextbookP1.cpp/: CMakeLists.txt  main.cpp
Twine/: EscapeRoom.html  twineproject.testcopy.html
data_structures/: read_me.txt
data_structures_and_cpp/: CMakeLists.txt  Dequeue.h  Recursion.h  Stack.h  linked_list.cpp  linked_list.h  main  main.cpp  queue
data_structures_and_cpp/Sorting/: QuickSortRecur.h
data_structures_and_cpp/Structures/: Double_ended_queue.h
data_structures_cpp/: CMakeLists.txt  DLL_w_merge.h  Double_linked_list.h  In_pre_post_fix.h  QuickSortRecur.h  Recursion.h  main.cpp  read_me.txt
p5project_code/Sketch_1/: homework.js  sketch.js
(+5 files in other folders)
